--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -4,7 +4,7 @@ header {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 929292929;
+	z-index: 9999;
 	height: 50px;
 
 	.container {
@@ -101,6 +101,22 @@ header {
 						z-index: 1;
 						transition: 0.3s;
 						height: fit-content;
+						&.cart-link {
+							position: relative;
+							span {
+								position: absolute;
+								background-color: var(--redColor);
+								color: var(--textColor);
+								width: 15px;
+								height: 15px;
+								display: flex;
+								justify-content: center;
+								align-items: center;
+								border-radius: 50%;
+								top: 0;
+								right: 0;
+							}
+						}
 						svg {
 							font-size: 20px;
 						}
@@ -126,6 +142,15 @@ header {
 									transform: translate(-50%, -50%) scale(1);
 									border-radius: 20px;
 								}
+								&.cart-link > span {
+									transition: 0.3s;
+									background-color: var(--bodyWhite);
+									color: var(--redColor);
+									position: relative;
+									display: flex;
+									font-size: 17px;
+									padding: 10px;
+								}
 							}
 						}
 						&.signup,
@@ -146,10 +171,11 @@ header {
 					}
 					&.drop-menu {
 						img {
-							width: 50px;
-							height: 50px;
+							width: 40px;
+							height: 40px;
 							cursor: pointer;
-							object-fit: contain;
+							border-radius: 50%;
+							object-fit: cover;
 						}
 						.menu-content {
 							padding: 10px;
