--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,7 +48,7 @@ body {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    /* width: 95%; */
+    width: 95%;
 }
 
 @media (min-width: 768px) {
@@ -79,6 +79,18 @@ body {
     grid-template-rows: 50px 1fr 50px;
 }
 
+/* Login Msg */
+.login-msg {
+    color: var(--mainColor);
+    text-align: center;
+    font-size: 20px;
+}
+
+.login-msg a {
+    color: var(--redColor);
+    text-decoration: none;
+
+}
 
 
 
@@ -125,7 +137,7 @@ button:active, svg:active, a:active {
     top: 0;
     left: 0;
     background-color: rgba(61, 61, 61, 0.7);
-    z-index: 111;
+    z-index: 11111;
     transition: all 0.5s ease-in-out;
 }
 
