--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,7 +1,7 @@
 .products-wrapper {
 	margin-top: 30px;
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	gap: 15px;
 	.product-item {
 		background-color: var(--bodyWhite);
@@ -13,8 +13,21 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		position: relative;
 		&:hover {
-			box-shadow: 0px 1px 15px rgb(3 0 71 / 9%);
+			box-shadow: 0px 1px 15px rgb(3 0 71 / 15%);
+		}
+
+		.product-discount {
+			background-color: var(--redColor);
+			color: var(--textColor);
+			transform: rotate(-45deg);
+			position: absolute;
+			padding: 2px;
+			top: 15px;
+			left: -25px;
+			font-size: 12px;
+			width: 100px;
 		}
 
 		img {
@@ -25,19 +38,19 @@
 			padding: var(--padding);
 		}
 		.product-desc {
-			> div {
+			.title {
 				color: var(--textSecondColor);
 				text-transform: capitalize;
 				padding: var(--padding);
 				text-align: left;
 			}
-			p {
+			.price-add {
 				padding: var(--padding);
 				display: flex;
 				justify-content: space-between;
 				align-items: center;
 				color: var(--redColor);
-				span {
+				.add {
 					border-radius: 5px;
 					border: 1px solid var(--redColor);
 					display: flex;
@@ -49,11 +62,27 @@
 					&:active {
 						transform: scale(0.93);
 					}
-					&:hover {
+					&.add:hover {
 						background-color: var(--redColor);
 						color: var(--textColor);
 					}
 				}
+
+				// .discount {
+				// 	all: unset;
+				// 	display: flex;
+				// 	align-items: center;
+				// 	font-weight: bold;
+				// 	font-size: 17px;
+				// 	.origin-price {
+				// 		text-decoration: line-through;
+				// 		border: none;
+				// 		color: var(--light-txt);
+				// 	}
+				// 	.discount-price {
+				// 		margin-right: 5px;
+				// 	}
+				// }
 			}
 		}
 	}
