--- a/client/src/pages/SingleOrder/SingleOrder.scss
+++ b/client/src/pages/SingleOrder/SingleOrder.scss
@@ -17,6 +17,7 @@
 			flex-direction: column;
 			gap: 20px;
 			text-align: center;
+
 			.icon {
 				width: 40px;
 				height: 40px;
@@ -31,14 +32,12 @@
 					color: var(--bkRed);
 				}
 			}
-			.user-info,
-			.shipping,
-			.address {
+
+			> div:not(.icon) {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
 				color: var(--textSecondColor);
-				span {
-					display: block;
-					margin-top: 5px;
-				}
 			}
 		}
 	}
